--- a/courses/capstone projects/style.css
+++ b/courses/capstone projects/style.css
@@ -47,10 +47,12 @@ header {
     font-size: 2.5rem;
     font-weight: normal;
 }
-.pro{
+
+.pro {
     text-decoration: underline;
 }
-.title-image{
+
+.title-image {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -59,6 +61,7 @@ header {
     position: relative;
 
 }
+
 .bottom-cloud {
     width: 125px;
     height: auto;
@@ -82,7 +85,9 @@ header {
     height: 30px;
     background-color: #333;
     color: white;
-    position:absolute;
-   bottom:0;
-   width:100%;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    padding: auto;
 }
