postgres fetching data: first step

--- a/databases/World+Capital+Quiz/views/index.ejs
+++ b/databases/World+Capital+Quiz/views/index.ejs
@@ -21,10 +21,10 @@
     </div>
 
     <h1 id="countryName">
-      <%=question.country %>
+      <%=question.flag %>
     </h1>
     <div class="answer-container">
-      <input type="text" name="answer" id="userInput" placeholder="Enter the capital" autofocus autocomplete="off">
+      <input type="text" name="answer" id="userInput" placeholder="Enter the country name" autofocus autocomplete="off">
 
     </div>
     <button type="submit">SUBMIT<% if(locals.wasCorrect){ %>
