--- a/apis/personalAPI/apis/views/index.ejs
+++ b/apis/personalAPI/apis/views/index.ejs
@@ -22,6 +22,9 @@
                     <h2><%=post.title%> </h2>
                     <p><%=post.content%> </p>
                     
+                    <a class="edit" href="/edit/<%= post.id %>">Edit</a>
+                    <a class="delete" href="/apis/posts/delete/<%= post.id %>">Delete</a>
+
                 </div>
                 <%})%>
         
